# Tinycom_Old

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
docs/: hardware.md  isa.md  mmc.md
src/assembler/: CMakeLists.txt  main.cpp  main.cxx
src/common/: CMakeLists.txt  bytecode.cpp  bytecode.cxx  dissassembly.cpp  dissassembly.cxx  tokens.cxx
src/includes/tinycom/: cpu.hpp  hardware.hpp  instructions.hpp  mem.hpp  strings.hpp  vm.hpp
src/includes/tinycommon/: instructions.hpp  isa.hpp  priority_queue.hpp  strings.hpp
src/tinycom/: CMakeLists.txt  cpu.cpp  main.cpp  mem.cpp  vm.cpp
src/tinyide/: CMakeLists.txt
